syntax = "proto3";

package pdefs;

option go_package = "pdefs";

message Hello {
    string UserID = 1;
    string Message = 2;
}
